Update ByteBuffersDataInput to use absolute gets